@@ -88,3 +88,7 @@ graph.btnCancel=Cancel
 
 graph.copyTableName=Copy table name
 graph.copyQualifiedTableName= Copy qualified table name 
+
+graph.allTablesDbOrderRequested=For all tables: DB order
+graph.allTablesByNameOrderRequested=For all tables: Order by name
+graph.allTablesPkConstOrderRequested=For all tables: Order PKs/constraints on top
